styles.css
body {
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    background-color: rgba(165, 42, 42, 0.106);
    width: 100vw;
}

.title-container {
    background-color: white;
    display: flex;
    /* width: 100vw; */
    align-items: center;
    border-bottom: 1px solid gray;
    /* position: relative; */
}

.odin-logo {
    width: 100px;
    height: 100px;
    margin-left: 20px;
    padding: 10px;
}

.title {
    margin-left: 100px;
    font-size: 3em;
}

.read-log {
    display: flex;
    flex-direction: column;
    width: 200px;
    height: 85px;
    border: 2px dashed black;
    border-radius: 2%;
    position: absolute;
    right: 0;
    /* margin-right: 10px; */
    margin: 0 10px;
    background-color: rgba(128, 128, 128, 0.096);
    /* box-sizing: border-box; */
    padding: 5px;
}

.log-header {
    font-weight: 600;
    font-size: 1.2em;
    margin-bottom: 10px;
}

.button-container {
    display: flex;
    justify-content: center;
}

.add-button {
    /* position: absolute;
    left: 47%; */
    margin-top: 2%;
    width: 150px;
    height: 35px;
    background-color: rgba(180, 36, 36, 0.712);
    border-radius: 3%;
    border: 2px dashed brown;
    cursor: pointer;
    color: rgb(247, 235, 220);
    font-size: larger;
}

.add-button:hover {
    background-color: rgba(180, 36, 36, 0.944);
}

.add-button:active {
    background-color: rgb(149, 18, 18);
}

.main-contents-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin-top: 40px;

}

.book-card {
    font-size: 1.2em;
    width: 300px;
    height: 200px;
    border: 1px solid black;
    background-color: rgba(165, 42, 42, 0.588);
    border-radius: 5px;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 5px;
    position: relative;
    padding: 20px;
}

.book-card > * {
    color: rgb(255, 221, 194);
    font-weight: 900;
    justify-content: space-evenly;
}

/* .book-card > :last-child {
    position: absolute;
    right: 0;
    bottom: 0;
    margin-right: 40px;
    margin-bottom: 10px;
} */

/* .book-card > :last-child {
    margin-left: 40px;
} */

.pop-up-container {
    display: none;
    width: 100vw;
    height: 100vh;
    position: absolute;
    left: 40%;
    top: 40%;
    z-index: 100;
    position: absolute;

}

.pop-up-form {
    width: 350px;
    height: 300px;
    border: 3px dashed brown;
    background-color: rgb(201, 125, 81);
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border-radius: 5px;
    /* position: absolute; */
}


.pop-up-form > form > * {
    width: 90%;
    margin: 10px;
    color: rgb(139, 80, 31);
    font-size: larger;
}

form > :first-child {
    font-weight: 700;
    font-size: 2em;
    width: 100%;
    text-align: center;
    margin-top: -20px;
}

form > :nth-last-child(2) {
    width: 20px;
    height: 20px;
    color: red;
}

form > :last-child {
    width: 100px;
    color: black;
}

.pop-up-background {
    display: none;
    position: absolute;
    left: 0;
    top: 0;
    z-index: 50;
    width: 100vw;
    height: 200vh;
    background-color: rgba(56, 56, 56, 0.87);
}

.close {
    width: 40px;
    height: 20px;
    border-radius: 50%;
    border: 3px solid black;
    background-color: white;
    position: absolute;
    margin: 20px 20px;
    top: 0;
    right: 0;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
    cursor: pointer;
}

.close:hover {
    background-color: rgb(230, 230, 230)
}

.close:active {
    background-color: rgb(202, 202, 202)
}

.have-read {
    width: 100%;
    /* margin: 0 5px; */
    height: 35px;
    border-radius: 5px;
    /* border: 1px solid black; */
    text-align: center;
    padding-top: 10px;
    color: rgb(80, 80, 80);
}

.have-read:hover {
    cursor: pointer;
}

.footer {
    position: fixed;
    bottom: 0;
    border-top: 1px solid black;
    width: 100%;
    padding: 5px 0;
    background-color: brown;
    color: rgb(255, 232, 232);
    font-weight: 700;
    text-align: center;
    margin-top: 50px;
}

.remove-button {
    width: 25px;
    height: 25px;
    margin-top: 10px;
    margin-right: 10px;
    border-radius: 50%;
    border: 1px solid black;
    position: absolute;
    right: 0;
    top: 0;
    background-color: brown;
    cursor: pointer;
}

.remove-button:hover {
    background-color: rgb(134, 32, 32);
}

